[package]
name = "lottery"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git" }
ft-logic-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
